--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "react": "^18.1.0",
     "react-bootstrap-icons": "^1.8.2",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
