--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "stopProduction": "pm2 stop server.js",
     "restartProduction": "pm2 restart server.js"
   },
-  "keywords": [],
+  "keywords": [
+    "heroku"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -21,5 +23,8 @@
     "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16",
     "pm2": "^5.2.0"
+  },
+  "engines": {
+    "node": "16.15.1"
   }
 }
